added components view

--- a/body.html
+++ b/body.html
@@ -1,7 +1,12 @@
+  
 <div>
+
+
+  </style>
 		<header-content>
 				<h1>This is the application header with the content tag created by {{ name }}</h1>
 		</header-content>
-		<input type="text" (keyup)="test($event, username)" #username placeholder="Enter a name here"/><hr><h1 [text]=>Hello {{ name }}</h1>
+		<input type="text" (keyup)="test($event, username)" #username placeholder="Enter a name here"/>
+		<h1>Hello {{ name }}</h1>
 		<!--footer-content></footer-content-->
 </div>
