--- a/index.html
+++ b/index.html
@@ -4,17 +4,26 @@
 				<title>Weo Angular2 with polymer 5.5</title>
 				<meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
 
-				<script src="/quickstart/dist/es6-shim.js"></script>
 		</head>
 		<body> 
-				<!--topheader></topheader-->
+
 		<main-content></main-content>
-		<script>
-				// Rewrite the paths to load the files
+
+		<script src="/quickstart/dist/es6-shim.js"></script>
+
+		<!--script src="traceur-runtime.js" type="text/javascript"></script>
+		<script src="es6-module-loader-sans-promises.src.js" type="text/javascript"></script>
+		<script src="zone.js" type="text/javascript"></script>
+		<script src="long-stack-trace-zone.js" type="text/javascript"></script>
+		<script src="extension-register.js" type="text/javascript"></script>
+		<script src="runtime_paths.js" type="text/javascript"></script>
+		<script src="system.src.js" type="text/javascript"></script-->
+		<script type="text/javascript">
 				System.paths = {
 						'router': '/quickstart/router/router.js',
-						'angular2/*': '/quickstart/es5/angular2/*.js', // Angular
+						'angular2/*': '/quickstart/angular2/*.js', // Angular
 						'rtts_assert/*': '/quickstart/es5/rtts_assert/*.js', //Runtime assertions
+					//	'login': '/components/login/*.es6', // The my-app component
 						'body': 'body.es6', 
 						'header': 'header.es6', 
 						'app': 'app.es6' 
@@ -27,7 +36,28 @@
 								// zone = zone.fork(Zone.longStackTraceZone);
 								return module.main();
 						});
+				//	System.import('router');sole.error.bind(console));
+		</script>
+		<!--script>
+				
+				// Rewrite the paths to load the files
+				System.paths = {
+					//	'router': '/quickstart/router/router.js',
+						'angular2/*': '/angular2/*.js', // Angular
+						'rtts_assert/*': '/rtts_assert/*.js', //Runtime assertions
+						'body': 'body.es6',
+						'header': 'header.es6',
+						'app': 'app.es6'
+				};
+
+				// Kick off the application
+				System.import('app')
+						.then(function (module) {
+								// uncomment for debugging.
+								// zone = zone.fork(Zone.longStackTraceZone);
+								return module.main();
+						});
 				//	System.import('router');
-		</script>    
+		</script-->    
 </body>
 </html>
