--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -3,13 +3,14 @@
 <head>
   <title>Ionic</title>
   <meta charset="UTF-8">
+  
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
   <link ios-href="build/css/app.ios.css" rel="stylesheet">
   <link md-href="build/css/app.md.css" rel="stylesheet">
   <link wp-href="build/css/app.wp.css" rel="stylesheet">  
 </head>
-<body class="platform-ios platform-cordova platform-webview">
+<body>
 
   <ion-app></ion-app>
 
