--- a/www/index.html
+++ b/www/index.html
@@ -15,6 +15,7 @@
   <ion-app></ion-app>
 
 
+  <script src="utilities.js"></script>
   <!-- cordova.js required for cordova apps -->
   <script src="cordova.js"></script>
   <!-- Zone.js and Reflect-metadata  -->
